objects/LLC_BI__Loan_Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Manufacturer__c</fullName>
        <description>This field is optional and manually populated. Use this field specify the party that manufactured the collateral being used to secure the loan.</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Marina_Port_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name of the marina or port that is the home marina or port of the boat/vessel collateral being used to secure the loan.</description>
        <label>Marina / Port Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Model__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the model of titled collateral used to secure the loan.</description>
        <label>Model</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name_of_Insured__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name as it appears on a life insurance policy being used to secure a loan.</description>
        <label>Name of Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Tonnage__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify a vessel&apos;s net tonnage. Net tonnage is used to calculate the port duties.</description>
        <label>Net Tonnage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>This field is optional and manually populated. Use this field to add notes regarding this piece of collateral.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Shares__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the number of shares being used for this type of collateral securing the loan. This field, when mapping to Laser Pro is only valid on collateral with the Securities subtype, with stock or mutual funds being used for Collateral.</description>
        <label>Number of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Units__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the number of units contained in the real estate property being used as collateral.</description>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owner_Occupied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the owner occupies or lives in the real estate property being used as collateral to secure a loan.</description>
        <label>Owner Occupied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Owners_Interest__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the percentage of ownership.</description>
        <label>Owner&apos;s Interest</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parcel_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the real estate parcel number (property identification number). This number is used for identification and record keeping for tax purposes.</description>
        <label>Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Account_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the account number for possessory collateral. When mapped into Laser Pro, when used with a Savings/CD collateral subtype, this field serves as the collateral account number. When used with a Securities collateral subtype, this field serves as the control agreement account number.</description>
        <label>Possessory Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Possessory_Current_Balance__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the balance available when using possessory collateral. This field is not valid for mapping to Laser Pro if sent with Securities, Stock, or Mutual Fund collateral.</description>
        <label>Possessory Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the real estate property being used to secure the loan is the primary or principal residence of the owner.</description>
        <label>Principal Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prior_Lien_Amount_Currency__c</fullName>
        <description>This field converts the prior lien amount to a currency data type.</description>
        <formula>IF( ISNUMBER(LLC_BI__Prior_Lien_Amount__c) , VALUE( LLC_BI__Prior_Lien_Amount__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Lien Amount Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prior_Lien_Amount__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the amount of a lien if there was a prior lien.</description>
        <label>Prior Lien Amount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prior_Lien_Holder__c</fullName>
        <description>This field is optional and manually populated. If there was a prior lien, use this field to specify its holder.</description>
        <inlineHelpText>If there is an existing lien, enter the name of that financial institution.</inlineHelpText>
        <label>Prior Lien Holder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Tax_Id__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the property tax ID number for the real estate property being used to secure the loan. It is typically used for tax billing and to identify the piece of land.</description>
        <label>Property Tax Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Property_Type__c</fullName>
        <description>This field is optional and manually populated. Use this field to describe the property type of a real estate property being used to secure a loan. Choose from the picklist to select Principal Dwelling, Secondary Dwelling, or Investment.</description>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Dwelling</fullName>
                </value>
                <value>
                    <fullName>Secondary Residence</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Purchase_Money__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify the collateral is under an original purchase loan, not a refinance or modification.</description>
        <label>Purchase Money</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Refinance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the real estate property being used as collateral has been refinanced.</description>
        <label>Refinance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Residential_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that a real estate property being used to secure a loan is a residential property.</description>
        <label>Residential Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secures_Future_Advances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used to secure future advances. This scenario is not valid for use with Aircraft or Ship collateral.</description>
        <label>Secures Future Advances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_Registered__c</fullName>
        <description>This field is optional and manually populated. It is the state where the collateral is registered.</description>
        <label>State Registered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sub_Type__c</fullName>
        <description>This field is optional and manually populated. This picklist field is dependent upon the Type field. It defines the basic subtype information about the collateral being used to secure the loan.</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Motor Vehicle</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Pleasure Boat</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>Trailer</fullName>
                </value>
                <value>
                    <fullName>Other Titled</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Savings/CDs</fullName>
                </value>
                <value>
                    <fullName>Securities</fullName>
                </value>
                <value>
                    <fullName>Note/Instrument</fullName>
                </value>
                <value>
                    <fullName>Receipts/Bills</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Other Possessory</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>Described</fullName>
                </value>
                <value>
                    <fullName>1-4 Family</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Lot</fullName>
                </value>
                <value>
                    <fullName>Land</fullName>
                </value>
                <value>
                    <fullName>Farm Land</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Other RE</fullName>
                </value>
                <value>
                    <fullName>Government Contracts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Subdivision__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the subdivision information for real estate collateral.</description>
        <label>Subdivision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_City__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the city of a third party associated with the collateral that is being used to secure a loan.</description>
        <label>Third Party City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Company__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the third party company associated with the collateral being used to secure a loan.</description>
        <label>Third Party Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Street_Address__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Zip_Code__c</fullName>
        <description>This field is optional and manually populated. This field is used to specify the ZIP code of the address of a third party associated with the collateral being used to secure a loan.</description>
        <label>Third Party Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional and manually populated. Use this picklist field to define the basic type information about the collateral being used to secure the loan. This field controls the subtype picklist options once a collateral type is selected.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Titled</fullName>
                </value>
                <value>
                    <fullName>Possessory</fullName>
                </value>
                <value>
                    <fullName>UCC</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_County_Filing__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a county.</description>
        <label>UCC County Filing #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Expiration_County__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the date in which the UCC filing in the county will expire. This is typically five years after it was initiated.</description>
        <label>UCC Expiration (County)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Expiration_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the date in which the UCC filing in the state will expire. This is typically five years after it was initiated.</description>
        <label>UCC Expiration (State)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Financing_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral being used has UCC financial statements currently active on it.</description>
        <label>UCC Financing Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_State_Filing__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a state.</description>
        <label>UCC State Filing #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__UCC_Type__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the type of UCC that is being used to secure the loan.</description>
        <label>UCC Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>LLC_BI__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Chattel Paper</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>General Intangibles</fullName>
                </value>
                <value>
                    <fullName>Farm Products</fullName>
                </value>
                <value>
                    <fullName>Livestock</fullName>
                </value>
                <value>
                    <fullName>Farm Equipment</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Tort Claim</fullName>
                </value>
                <value>
                    <fullName>Crops</fullName>
                </value>
                <value>
                    <fullName>Fixtures</fullName>
                </value>
                <value>
                    <fullName>Standing Timber</fullName>
                </value>
                <value>
                    <fullName>Minerals, Oil and Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__VIN__c</fullName>
        <description>This field is optional and manually populated. It is the vehicle identification number (VIN) of a piece of collateral.</description>
        <label>Vehicle ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Vessel_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the filing number of a UCC financing statement within a state.</description>
        <label>Vessel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year_Built__c</fullName>
        <description>This field is optional and manually populated. It is is used to specify the year a real estate property being used to secure a loan was built.</description>
        <label>Year Built</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the year the titled collateral being used to secure the loan was made.</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__isFutureContext__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is currently not being used.</description>
        <label>isFutureContext</label>
        <type>Checkbox</type>
    </fields>
    <label>Collateral</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Collateral Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <recordTypes>
        <fullName>Collateral_Start</fullName>
        <active>true</active>
        <label>Collateral - Start</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Government_Contracts</fullName>
        <active>true</active>
        <description>Record type for Government Contract collateral</description>
        <label>Government Contracts</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Letter_of_Credit</fullName>
        <active>true</active>
        <description>Record type for Possessory Letter of Credit collateral</description>
        <label>Possessory Letter of Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Life_Insurance</fullName>
        <active>true</active>
        <description>Record type for Possessory Life Insurance Collateral</description>
        <label>Possessory Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Notes_Instrument</fullName>
        <active>true</active>
        <description>Record type for Possessory Notes/ Instrument collateral</description>
        <label>Possessory Notes/ Instrument</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Other</fullName>
        <active>true</active>
        <description>Record type for Possessory Other collateral</description>
        <label>Possessory Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Savings_CD</fullName>
        <active>true</active>
        <description>Record type forPossessory Savings/CD collateral</description>
        <label>Possessory Savings/CD</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Possessory_Securities</fullName>
        <active>true</active>
        <description>Record type for Possessory Securities collateral</description>
        <label>Possessory Securities</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Real_Estate</fullName>
        <active>true</active>
        <description>Record type for Real Estate collateral</description>
        <label>Real Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Aircraft</fullName>
        <active>true</active>
        <description>Record type for Titled Aircraft collateral</description>
        <label>Titled Aircraft</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Boat</fullName>
        <active>true</active>
        <description>Record type for Titled Boat collateral</description>
        <label>Titled Boat</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Mobile_Home</fullName>
        <active>true</active>
        <description>Record type for Titled Mobile Home collateral</description>
        <label>Titled Mobile Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Motor_Vehicle</fullName>
        <active>true</active>
        <description>Record type for Titled Motor Vehicle Layout collateral</description>
        <label>Titled Motor Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Other</fullName>
        <active>true</active>
        <description>Record type for Titled Other collateral</description>
        <label>Titled Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Titled_Vessel</fullName>
        <active>true</active>
        <description>Record type for Titled Vessel collateral</description>
        <label>Titled Vessel</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__UCC_Life_Described</fullName>
        <active>true</active>
        <description>Record type for UCC Described collateral</description>
        <label>UCC Described</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>